# robocup-pnp

./: .gitignore  CMakeLists.txt  README.md  package.xml
demos/cocktail_party/actions/: goto_kitchentable_coke  wantsomethingelse
demos/cocktail_party/plans/: cocktail_party.plan  cocktail_party_interaction.plan  genplan.sh  runplan.sh
launch/: rcathome_pnp.launch
plans/: actioncmd.sh  cocktail_party.er  cocktail_party.plan  cocktail_party_interaction.plan  navigation.plan  runplan.sh
plans/cocktail_party_demo/actions/: goto_fridge_beer  whichdrink
scripts/: cp.py  fp.py  naoqi_install.bash
src/: Actions.cpp  ActionsBase.cpp  Conditions.cpp  RCHPNPAS.cpp  RCHPNPAS.h  TCPClient.cpp  TCPClient.h  main.cpp  topics.h
